# DB-Sync-Studio

./: .gitignore  AGENTS.md  README.md  pom.xml
.github/workflows/: release.yml
app-core/: pom.xml
app-model/: pom.xml
app-shell/: package-lock.json  package.json
app-shell/src-tauri/: Cargo.toml  tauri.conf.json
app-shell/src-tauri/icons/: icon.icns
app-shell/src-tauri/resources/backend/: run-backend.bat  run-backend.sh
app-shell/src-tauri/resources/backend/runtime/: release
app-shell/src-tauri/resources/backend/runtime/lib/: jspawnhelper  libjava.dylib  libjimage.dylib  libjli.dylib  libjsig.dylib  libnet.dylib  libnio.dylib  libosxsecurity.dylib  libsyslookup.dylib  libverify.dylib  libzip.dylib
app-shell/src-tauri/src/: backend.rs  main.rs
app-store/: pom.xml
app-ui/: index.html  package-lock.json  package.json  vite.config.js
app-ui/src/: main.js
app-ui/src/components/: CreatableSelect.vue  StateEmpty.vue  TransformRuleDrawer.vue
app-ui/src/config/: menu.js
app-ui/tests/: onboarding-state-check.mjs
docs/: architecture.md  structure.md
docs/codebase-memory/: ARCHITECTURE.md  CODE_INDEX.md  CONTEXT_COMPACT.md  DECISIONS.md  IMPLEMENTATION_STATUS.md  MODULE_DATABASE_ADAPTERS.md  MODULE_FRONTEND.md  MODULE_PACKAGING.md  MODULE_SQLITE.md  MODULE_SYNC_CORE.md  MODULE_TASK_SCHEDULER.md  MODULE_TAURI.md  NEXT_TASKS.md  PROJECT_OVERVIEW.md  SKILL_USAGE.md  TASK_TEMPLATE.md  WORKFLOW.md
scripts/: generate-tauri-icons.js  package-env.test.js  package.bat  package.js  package.ps1  package.sh  tauri-before-build.js  tauri-before-build.test.js
(+398 files in other folders)
