[package]
name = "db-sync-studio"
version = "0.1.0"
description = "DB Sync Studio desktop shell"
authors = ["DB Sync Studio"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = ["dialog"] }
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
